--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -1,3 +1,4 @@
+<div>
 <h3>Submissions</h3>
 <table  class="table">
 	<tr class="row">
@@ -17,7 +18,8 @@
 		<td class="col-xs-1">{{x.selectedLevel}}</td>
 		<td class="col-xs-2">{{x.nomination}}</td>
 		<td class="col-xs-2">{{x.sponsormailid}}</td>
-		<td class="col-xs-1"><a href="a._f?download={{x.filekey}}&filename={{x.filename}}" type="application/x-zip-compressed"> download</a></td>
+		<td class="col-xs-1" ng-if="x.filekey != ''"><a href="a._f?download={{x.filekey}}&filename={{x.filename}}" type="application/x-zip-compressed"> download</a></td>
+		<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 		<td class="col-xs-1">{{x.status}}</td>
 		<td class="col-xs-1" ng-if="x.status=='Saved'">
 		<button ng-click="viewsubmission(x);updatenomination(x,'Submitted')">Submit</button>
@@ -26,7 +28,7 @@
 		<button ng-click="viewsubmission(x);updatenomination(x,'Saved')">Recall</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Approved' || x.status=='Rejected'">
-		<button disabled="disabled">No Action</button>
+		<button ng-disabled="true">No Action</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Saved'"><span
 			class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removenomination($index)"></span>
@@ -34,3 +36,4 @@
 		<td class="col-xs-1" ng-if="x.status!='Saved'"></td>
 	</tr>
 </table>
+</div>
