Added SPNEGA support

--- a/AFE2016/src/main/webapp/index.html
+++ b/AFE2016/src/main/webapp/index.html
@@ -23,6 +23,7 @@
 			<button class="btn-lg" ng-click="newnominationhtml()">New Nomination</button>
 			<button class="btn-lg" ng-click="viewsubmissionhtml()">View	Nominations</button>
 			<button class="btn-lg" ng-click="viewsponsorhtml()">Sponsor View</button>
+			<span>Hi {{userPrincipal}}!</span>
 		</div>
 		<hr>
 		<div ng-if="state=='sponsor' && sponsors.length > 0 " class="row">
