--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -18,11 +18,12 @@
 		<td class="col-xs-1">{{x.selectedLevel}}</td>
 		<td class="col-xs-2">{{x.nomination}}</td>
 		<td class="col-xs-2">{{x.sponsormailid}}</td>
-		<td class="col-xs-1"><a href="a._f?download={{x.filekey}}&filename={{x.filename}}" type="application/x-zip-compressed"> download</a></td>
+		<td class="col-xs-1" ng-if="x.filekey != ''"><a type="application/x-zip-compressed" href="javascript:void(0);" ng-click="downloadfile(x.filekey,x.filename,x.filetype)">{{x.filename}}</a></td>
+		<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 		<td class="col-xs-1">{{x.status}}</td>
 		<td class="col-xs-2" ng-if="x.status=='Submitted'">		
-		<button ng-click="updatenomination('Approved')">Approve</button>
-		<button ng-click="updatenomination('Rejected')">Reject</button>
+		<button ng-click="viewsubmission(x);updatenomination(x,'Approved')">Approve</button>
+		<button ng-click="viewsubmission(x);updatenomination(x,'Rejected')">Reject</button>
 		</td>
 		<td class="col-xs-2" ng-if="x.status!='Submitted'">
 		<button disabled>Approve</button>
