--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -1,6 +1,7 @@
 <div>
 <h3>Sponsorship requests</h3>
-<table  class="table">
+<div ng-if="sponsors.length == 0"><h4> There are no records to display </h4></div>
+<table  class="table" ng-if="sponsors.length > 0">
 	<tr class="row">
 		<th class="col-xs-1"></th>
 		<th class="col-xs-2">Category</th>
@@ -29,9 +30,6 @@
 		<button disabled>Approve</button>
 		<button disabled>Reject</button>
 		</td>		
-		<!-- <td class="col-xs-1"><span
-			class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removenomination($index)"></span></td>
- -->
 	</tr>
 </table>
 </div>
